--- a/templates/calendar/calendar_show.html
+++ b/templates/calendar/calendar_show.html
@@ -1,5 +1,84 @@
+<div class="row subHeader actionsBar">
+    <table style="width:100%;height: 55px;">
+          <tbody><tr>
+            <td class="appTd">
+            <div class="btn-group">
+                 <a class="filterItem" href="#" data-toggle="dropdown" style="margin-right:0px">
+                  {% if active_app.label =="Relationships" %}
+                      <img class="app_icon" src="static/img/sm-iogrow-true.png" style="display:inline-block;height: 20px;margin-right: 3px;">
+                      {% else%}
+                      <img class="app_icon" src="static/img/admin_min.png" style="display:inline-block;height: 20px;margin-right: 3px;">                        
+                  {% endif %}
+                  <span class="hide_sm">{{_(active_app.label)}}</span>   
+                  <i class="icon-angle-down fa fa-angle-down"></i>
+                 </a>
+                 <ul class="dropdown-menu">
+                  {%for application in apps %}
+                        {% if application.label =="Relationships" %}
+                          <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal"><img class="app_icon"  src="static/img/sm-iogrow-true.png" style="display:inline-block;height: 20px;margin-right: 3px;">{{_(application.label)}}</a></li>
+                          {% else%}
+                           <li><a href="/apps/{{ application.key.id() }}" data-toggle="modal"><img class="app_icon"src="static/img/admin_min.png" style="display:inline-block;height: 20px;margin-right: 3px;">{{_(application.label)}}</a></li>
+                        
+                          {% endif %}
+                       
 
-<div class="row subHeader">
+                  {%endfor%}
+                 </ul>
+             </div>
+          </td>
+      <td class="middleHeaderTd">
+        <div class="subheadContient" style="padding-top: 5px;float: left;vertical-align: middle;">
+              <h2 class="page-title" style="margin-left: 5px; font-size:20px;float: left;vertical-align: middle;">
+                {{ _("Calendar")}}
+              </h2>
+        </div>
+            <a  class="btn red newAccountBtnOnscroll pull-right" href="#newEventModal2" data-toggle="modal" ng-click="newEventisClicked()">
+             <i class="fa fa-calendar"></i>{{ _(" New ")}}<span class="hidden-xs hiddenOnxs">{{ _("Event ")}}</span>
+           </a>
+                 
+      </td> 
+      <td class="settingsTd">
+            <div style=" padding-left: 10px;">
+              <a class="headerBtn hide_sm" title="Help" style="margin-left: 20px; margin-right: 12px;" ng-click="switchShow()"> 
+                  <i class="fa fa-question-circle" style="padding-top: 6px; font-size: 16px;"></i>
+              </a>
+               {%for application in apps %}
+                 {%if application.label =="Admin Console" %}
+                  <a  href="/apps/{{ application.key.id() }}" class="headerBtn hide_sm" title="Settings" style="margin-left: 20px; margin-right: 12px;" > 
+                      <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
+                  </a>
+                 {%endif%}
+               {%endfor%}  
+              <div class="btn-group show_sm" style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
+                  <a class="headerBtn" title="More" data-toggle="dropdown"> 
+                      <i class="fa  fa-ellipsis-vertical" style="padding-top: 6px; font-size: 16px;"></i>
+                  </a>
+                  <ul class="dropdown-menu drp-dwn-right">
+                    <li>
+                        <a class="headerBtn hide_sm" title="Help" style="margin-left: 20px; margin-right: 12px;" ng-click="switchShow()"> 
+                            <i class="fa fa-question-circle" style="padding-top: 6px; font-size: 16px;"></i>
+                        </a>
+                    </li> 
+                    {%for application in apps %}
+                       {%if application.label =="Admin Console" %}
+                        <li>
+                        <a  href="/apps/{{ application.key.id() }}" class="" title="Settings" > 
+                            <i class="fa fa-gear" style="padding-top: 6px; font-size: 16px;"></i>
+                            {{ _("Settings")}}
+                        </a>
+                        </li> 
+                       {%endif%}
+                    {%endfor%}  
+                  </ul>
+              </div>           
+          </div>
+      </td>
+          </tr>
+          
+        </tbody>
+  </table>
+</div>
+<!--<div class="row subHeader">
     <div class="currentApp">
        <div class="btn-group">
            <a class="filterItem" href="#" data-toggle="dropdown" >
@@ -22,14 +101,14 @@
         {{ _("Share") }}
       </a>
     </div-->
-    <h2 class="page-title" >
+    <!--<h2 class="page-title" >
       <!--a href="<%=uri%>" data-toggle="tooltip" id='testEdit' data-placement="bottom" title="Back to Accounts">
         <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="/static/img/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false">
       </a-->
-      {{_("Calendar")}}
+     <!-- {{_("Calendar")}}
      </h2>
   </div>
-</div>
+</div>-->
 <input  type="hidden" value='{{ME}}' id="user_id"/>
 
 <div  class="page-content">
@@ -48,11 +127,11 @@
       </span>
     </div>
   </div>
-    <div class="row subHeaderContainer">
+    <!--<div class="row subHeaderContainer">
         <div class=" col-md-4 col-sm-4 col-xs-4 subHeaderContent">
            <div class="row">
               <!-- <h2 class="page-title">{{ _("Contacts") }} </h2> -->
-           </div>
+          <!--  </div>
         </div>
      <div class="col-md-8 col-sm-8 col-xs-8">
         <div class="row">
@@ -66,9 +145,9 @@
          </div>
          </div>
     </div>
-  </div>
+  </div>-->
 
-  <div ng-show="isContentLoaded" class="row">
+  <div ng-show="isContentLoaded" class="row" style="margin-top: 16px;">
     <div class="col-md-12 showPage">
         <div id="calendar" class="has-toolbar">
     </div>
