add titile to img balise
Former-commit-id: d833ba8381a7c86381d0ab6699225d18c15ce367 [formerly 99d58d1464e7c221ec3adf5a84baa1cf886c21c0] [formerly 258611e3ffd4e98a0b2fd8b1673434313f16cc55 [formerly 6e93513977c1291a01faa32b0143b2c6f46c4598]]
Former-commit-id: 9e55d8a1b2576e866008e22ba403d857587155df [formerly f887afe60e7d55a6772c07ebe2d1cd1280130fa7]
Former-commit-id: 79b2c78bfea065a96066471fc3022f147f3d3643

--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -229,11 +229,7 @@ if (window.location.host != "localhost")
                  With just one click you can automatically add a new lead from LinkedIn to ioGrow. No need to spend time on data entry. Focus on what matters: serving your customers and closing more deals.
               </p>
               <br>
-              <a class="maia-button button-download download-mobile get-started" href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni" style="display: inline-block;font-size: 20px;vertical-align: text-top;" target="_blank"><img src="http://storage.googleapis.com/iogrow-cdn/chrome_store.png" width="25
-                                                                                                           px" style="
-    margin-right: 10px;
-    vertical-align: middle;
-">
+              <a class="maia-button button-download download-mobile get-started" href="https://chrome.google.com/webstore/detail/iogrow-chrome-extension/eafcehcahfabjibkmffekmcnlnnopkni" style="display: inline-block;font-size: 20px;vertical-align: text-top;" target="_blank"><img title="ioGrow chrome extension" src="http://storage.googleapis.com/iogrow-cdn/chrome_store.png" width="25px" style="margin-right:0px; vertical-align: middle;">
               Install ioGrow Chrome extension</a>
             </div>
           </div>
