--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -5,13 +5,12 @@
     <meta http-equiv="content-language" content="en">
     <meta charset="utf-8">
     <meta content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
-    <meta content="social CRM for small businesses on Google. With iOgrow, easily generate leads, also from LinkedIn, organize sales process, get users and customers from Twitter" name="description">
+    <meta name="description" content="A simple social CRM for small businesses on Google. organize your sales process, Lead generation from Linkedin, Twitter and Gmail" >
 
     <meta content="ioGrow - A simple social CRM for small businesses on Google" property="og:title">
     <meta content="http://storage.googleapis.com/iogrow-gs/Logo-iogrow-gray.png" property="og:image">
     <meta content="Lead generation and sales process organization" property="og:description">
-    <title>Social CRM for small business on Google, leads from linkedIn | iOgrow
-    </title>
+    <title>A simple Social CRM for small business on Google, leads from linkedIn | ioGrow</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,600&subset=latin,cyrillic-ext,greek-ext,greek,vietnamese,latin-ext,cyrillic" rel="stylesheet">
     <link href="/static/new_web_site/google_drive_files/site.min.css" rel="stylesheet">
     <script async src="/static/new_web_site/google_drive_files/modernizr.js">
@@ -44,42 +43,7 @@
       font-weight: bold;
     }
     </style>
-<<<<<<< HEAD
-    <!-- Google Analytics -->
-<script type="text/javascript">
-  (function() {
-    var po = document.createElement('script');
-    po.type = 'text/javascript'; po.async = true;
-    po.src = 'https://plus.google.com/js/client:plusone.js';
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(po, s);
-  })();
-  </script>
-<script type="text/javascript">
 
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-if (window.location.host != "localhost")
-{
-  {%if user %}
-    console.log('1');
-    ga('create', 'UA-52188380-1', { 'userId': {{user.google_user_id}} });
-    ga('send', 'pageview');
-  {% else %}
-        console.log('2');
-        ga('create', 'UA-52188380-1', 'auto');
-        ga('send', 'pageview');
-  {% endif %}
-}
-
-
-</script>
-<!-- End Google Analytics -->
-=======
-   
->>>>>>> e763f3f95358fa33dd49c55a22b417556d4ee0c9
   </head>
   <body class="index nav-light">
     <header class="header" role="banner">
@@ -305,7 +269,7 @@ if (window.location.host != "localhost")
         <div class="section-centered section-vertical-align js-vertical-align" style="margin-top: -151.5px;">
           <div class="one-whole" id="pricing" style="text-align:center;">
           <img title="ioGrow Social CRM" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png"/>
-        <h2 class="section-headline section-headline-large section-headline-gray heading-headline">Built on Google, CRM ioGrow is free for the first 10 000 users !
+        <h2 class="section-headline section-headline-large section-headline-gray heading-headline">Built on Google,ioGrow CRM is free for the first 10 000 users !
             </h2>
             <br>
           
