fixing pull-right of all settings buttons on tasks header
Former-commit-id: 05c2eda270ab2adc70d7926f7314b6c495032726 [formerly 278966c6282460cc8c69dabe1afc3374524e9fbf] [formerly 1980958843575240d268ab223ddf47ff28456f9e [formerly 1f3f0c4cf6161e5967da60b49258615b0b11dc6b]]
Former-commit-id: 82b9272cf8b58ad95c9f90e3c6b936473223939b [formerly 3543844c5a34b1b93222f301a53aa3acf8b51ff6]
Former-commit-id: 5b12b9a96cc7d29bf362153d66c0aa2738740022

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -76,7 +76,7 @@
         </div>   
       </td> 
       <td class="settingsTd">
-            <div style=" padding-left: 10px;">
+            <div style=" padding-left: 10px;" class="pull-right">
               <a class="headerBtn hide_sm" title="Help" style="margin-left: 20px; margin-right: 12px;" ng-click="switchShow()"> 
                   <i class="fa fa-question-circle" style="padding-top: 6px; font-size: 16px;"></i>
               </a>
