--- a/templates/opportunities/opportunity_list.html
+++ b/templates/opportunities/opportunity_list.html
@@ -108,7 +108,7 @@
                  
       </td> 
       <td class="settingsTd">
-            <div style=" padding-left: 10px;">
+            <div style=" padding-left: 10px;" class="pull-right">
              
               <div class="btn-group hide_sm" style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
                   <a class="headerBtn" title="Filter/Sort options" data-toggle="dropdown"> 
