--- a/templates/activities/all_tasks.html
+++ b/templates/activities/all_tasks.html
@@ -105,7 +105,7 @@
                  
       </td> 
       <td class="settingsTd">
-            <div style=" padding-left: 10px;">
+            <div style=" padding-left: 10px;" class="pull-right">
              <a class="headerBtn hide_sm" title="View" style="margin-left: 6px;margin-right: 12px;" ng-click="switchShow()"> 
                   <i class="fa fa-th-large" style="padding-top: 6px; font-size: 16px; display: none;" ng-show="show=='list'"></i>
                   <i class="fa fa-list" style="padding-top: 6px; font-size: 16px;" ng-show="show=='cards'"></i>
