--- a/templates/calendar/calendar_show.html
+++ b/templates/calendar/calendar_show.html
@@ -38,7 +38,7 @@
                  
       </td> 
       <td class="settingsTd">
-            <div style=" padding-left: 10px;">
+            <div style=" padding-left: 10px;" class="pull-right">
               <a class="headerBtn hide_sm" title="Help" style="margin-left: 20px; margin-right: 12px;" ng-click="switchShow()"> 
                   <i class="fa fa-question-circle" style="padding-top: 6px; font-size: 16px;"></i>
               </a>
