working on mark as lead salesforce api
Former-commit-id: e59b6c6c14ed847f6fd3e788f4c3877ebc590500 [formerly f7746d3acff5b7f2a06050266272dfe364655c04] [formerly 7a53594efe8e7907c8f48e985824d1735af46b59 [formerly 5bb6f7ec524a5593a40a70dd7afd2e4ff6cb4c19]]
Former-commit-id: 07a7cc1f1c3cd0f9c731445cef67a5324cd3a380 [formerly 51acaa3fa3ac6111013ffea92f5451400622f999]
Former-commit-id: a1d3a135007bba01a66d399d96c8765872593c16

--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -43,8 +43,12 @@
       color:rgb(13, 6, 65);
       font-weight: bold;
     }
+    .video-webm{
+      width: 100%;
+      text-align: center;
+    }
+    
     </style>
-<<<<<<< HEAD
     <!-- Google Analytics -->
 <script type="text/javascript">
   (function() {
@@ -77,9 +81,7 @@ if (window.location.host != "localhost")
 
 </script>
 <!-- End Google Analytics -->
-=======
-   
->>>>>>> e763f3f95358fa33dd49c55a22b417556d4ee0c9
+
   </head>
   <body class="index nav-light">
     <header class="header" role="banner">
@@ -398,11 +400,7 @@ if (window.location.host != "localhost")
 var manageParams = new drive.QueryParamManager();
     </script> <script>
 var home = new drive.SetUp('home');
-$(window).scroll(function() {
-          if ( $(document).height() - $(window).height() - 100) {
-              console.log('something');
-          }
-});
+
     </script>
     <script type="text/javascript">
   $( document ).ajaxStart(function() {
@@ -612,6 +610,28 @@ if (window.location.host != "localhost")
   {% endif %}
 }
 
+
+// function playIlyesVideo(){
+//   var ilyesVideo = $('.video-webm');
+//   console.log(ilyesVideo);
+//   if($('.video-webm').get(0).paused){
+//       $('.video-webm').get(0).play();
+//   }
+  
+// }
+// window.IlyesVideoPlayed = false;
+// $(window).scroll(function() {
+
+//   var y = $(window).scrollTop();
+//   if(y>410){
+//     if(!window.IlyesVideoPlayed){
+//       window.IlyesVideoPlayed=true;
+//       playIlyesVideo();
+//     }
+    
+//   }
+  
+// });
 
 </script>
 <!-- End Google Analytics -->
