finxing bug on email modal & header vertical align
Former-commit-id: 3ff9d8a690aef5c7186bd5410d159dbda876b37a [formerly 08f18daf701a32f0624a093477b6b308c7d1653d] [formerly d517d3ee0bed5f3dee696b90e83e7e4341943649 [formerly 7fdbf5da5123e7e5acdc9914f20b1e95c9d738c5]]
Former-commit-id: 674797ccff92c6fe88b16f9cc3fa94ee5107f0b8 [formerly 1c341ceaedf0be7ad2ab76091ad3a2ad3c64123f]
Former-commit-id: ab6cd85bd0b25eb4c66fca154cc499a1362e2509

--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -27,7 +27,7 @@
              </div>
           </td>
       <td class="middleHeaderTd">
-        <div class="subheadContient" style="padding-top: 5px;float: left;vertical-align: middle;">
+        <div class="subheadContient" style="float: left;vertical-align: middle;">
               <h2 class="page-title" style="margin-left: 5px; font-size:20px;float: left;vertical-align: middle;">
                 {{ _("Discovery") }}
               </h2>
