--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -48,7 +48,7 @@
                       <i class="fa fa-twitter"></i> {{ _("Tweets") }}  
                 </a>
                  <a id="influencers" class="headerBtn" title="Add tags" ng-class="{activeFilter: selectedOption =='my'}" ng-click="influencers_V2();selectedOption ='my'" ng-hide=" selectedCards.length==0"> 
-                      <i class="fa fa-group"></i> {{ _(" Influencers") }}  
+                      <i class="fa fa-group"></i> {{ _("Influencers") }}  
                 </a>
                  <a id="map" class="headerBtn" title="Add tags" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'" ng-hide=" selectedCards.length==0"> 
                       <i class="fa fa-map-marker"></i> {{ _("MAp") }}  
@@ -255,7 +255,7 @@
           <div class="actions-section">
              
               <div class="iogrow-actions pull-left">
-                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(tweet_map._source)"><i class="fa fa-road "></i> Mark as lead</a>
+                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(tweet_map._source)"><i class="fa fa-road "></i>{{_('Mark as lead')}}</a>
               </div>
               <div class="clearfix"></div>
             </div>
@@ -325,7 +325,7 @@
           <div class="actions-section">
              
               <div class="iogrow-actions pull-left">
-                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(influencer._source)"><i class="fa fa-road "></i> Mark as lead</a>
+                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(influencer._source)"><i class="fa fa-road "></i>Mark as lead</a>
               </div>
               <div class="clearfix"></div>
             </div>
@@ -397,7 +397,7 @@
                 <a class="" ng-click="popitup('https://twitter.com/intent/favorite?tweet_id=<%= tweet._source.id %>')"><i class="fa fa-star"></i></a>
               </div>
               <div class="iogrow-actions pull-left">
-                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(tweet._source)"><i class="fa fa-road "></i> Mark as lead</a>
+                <a class="" href="#" data-toggle="modal" ng-click="markAsLead(tweet._source)"><i class="fa fa-road "></i> {{_('Mark as lead')}}</a>
               </div>
               <div class="clearfix"></div>
             </div>
@@ -411,7 +411,7 @@
         <div class="loaderCard" ng-show="isLoadingtweets" data-span="all">
           <div class="loaderCardContent">
              <img class="img-responsive " src="/static/img/gloader.gif">
-             <span>  Loading...</span>
+             <span>  {{_('Loading...')}}</span>
           </div>
         </div>
       </div><!--/inner-cards-container-->
@@ -472,7 +472,7 @@
     <div class="portlet showCard" style="padding: 15px;">
       <div class="portlet-title fa-bullhorn">
         <div class="caption ">
-                <!-- class="fa fa-reorder"--><i></i>{{_("Topics: ")}}
+                <!-- class="fa fa-reorder"--><i></i>{{_("Topics:")}}
         </div>  
       </div>
       <div class="portlet-body">
