new design on website
Former-commit-id: b916e344c84c745a4c49f3fbf4c73a39effb9607 [formerly 4c1b45ea956c01d9731ee6c15530cf1dc7652d43] [formerly 64a1fa380ee74890963c73e70828ccb5a43150bb [formerly 4e97d5d4dc9ed3aa572917ad4be0d608af6aa2a4]]
Former-commit-id: f7f6bf60b4e5b601a22b67ebb5782be7f7f798a9 [formerly 96f14e3c469646b0a5d812a2ef31785ae5082712]
Former-commit-id: 46e073b73cc4f825f2d3dcfb14561f21177d79bb

--- a/templates/new_web_site/sign-in.html
+++ b/templates/new_web_site/sign-in.html
@@ -34,9 +34,9 @@
       
     </header>
     <section class="section-intro" style="height: 560px; opacity: 1;">
-      <div class="content" style="margin-left: 309.5px !important;">
+      <div class="content">
         <div class="column column-left with-example">
-          <img alt="" class="example" src="http://storage.googleapis.com/iogrow-gs/devices.jpg">
+          <img alt="" class="example" src="http://i.imgur.com/nygUnBu.png" style="width: 100%;height: initial;">
         </div>
         <div class="column column-right with-copy">
           <div class="copy text-left">
