add Faq in help in all tabs
Former-commit-id: 49ec9ecf4545e6b668c4e938c7534eceb1932e0b [formerly 794a8687cd7b3082f3c325f60193ec0831e108a4] [formerly 55e850f05dec45175fabcae31c2b04ee4a909099 [formerly 250807b8f6d6155db8972eede689d9775746841a]]
Former-commit-id: 0d086233586f6afa3c4fe6d5f521645567d30017 [formerly 6a0aae474dcbbd6edb69c1d7c364f037dfa0f282]
Former-commit-id: ef703ec28de3dce04e6f7dc0805c9c0b540f186e

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -142,6 +142,7 @@
                    
                     <li><a  ng-click="wizard()" href="#"  data-toggle="modal">{{ _('Launch Wizard ') }}</a></li>
                   <li><a target="new" href="https://www.youtube.com/channel/UCPfenS7B-qZ81sx6tanym0w/videos">{{ _('Videos Help') }}</a></li>
+                      <li><a target="new" href="http://blog.iogrow.com/iogrow-faq">{{ _('Faq') }}</a></li> 
                     
                   </ul>
                </div>
