--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -44,7 +44,7 @@
                 <a class="" title="Convert" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
                       <i class="fa  fa-refresh" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>-->
-                <a id="tweets" class="headerBtn" title="Add tags" ng-class="{activeFilter: selectedOption =='my'}" ng-click="influencers_V2();selectedOption ='my'" ng-hide=" selectedCards.length==0"> 
+                <a id="tweets" class="headerBtn" title="Add tags" ng-class="{activeFilter: selectedOption =='my'}" ng-click="back_to_tweets();selectedOption ='my'" ng-hide=" selectedCards.length==0"> 
                       <i class="fa fa-twitter"></i> {{ _("Tweets") }}  
                 </a>
                  <a id="influencers" class="headerBtn" title="Add tags" ng-class="{activeFilter: selectedOption =='my'}" ng-click="influencers_V2();selectedOption ='my'" ng-hide=" selectedCards.length==0"> 
