add life time license
Former-commit-id: 7542b89d36478fca2b920ee850e62b8380e65c7c [formerly af7d1961931bdb2833c51b00a12b6f2f031763ca] [formerly 6171789e2d18c66fba73f715da2c77dbf8158bcf [formerly e6991893407ff18884a3cc1d9cc6159d66efffc8]]
Former-commit-id: 959a3752c373fa967297e2f094ec629f776c29b2 [formerly 15b188ab5291eecce91c2e80c9bb56726b7df602]
Former-commit-id: 902e8a846b73a348638d18cf106e546a8c1550db

--- a/templates/admin/users/user_list.html
+++ b/templates/admin/users/user_list.html
@@ -64,17 +64,19 @@
        <div class="col-sm">
           <i class="fa  fa-check "></i>
           {{ _('Licence type')}}: <%=organization.license.name%> <!-- licenses type>-->
-       </div>       
-       <div class="col-lg">
+       </div>     
+      {% if is_not_a_life_time %}
+       <div class="col-lg" >
         <i class="fa  fa-calendar "></i>
-          {{ _('Expire')}}  : <%=organization.expires_on | date:'yyyy-MM-dd '%> <!--ex date>-->
+          {{ _('Expire')}}  : <%=organization.expires_on | date:'yyyy-MM-dd'%> <!--ex date>-->
        </div>
        <button  title='{{ _("Purchase")}}' class="btn btn-sm blue task_action pull-right" ng-click="showPurchase()" >
            <i class="fa fa-shopping-cart"></i>
            <span class="btn-text">
               {{ _('Purchase')}}
            </span>
-        </button>
+        </button> 
+        {% endif %}
         <div class="clearfix"></div>
      </div>
      <div class="showPage margin-bottom-15 col-md-12 task-actions" style="padding-top:10px; padding-bottom:10px;">
