--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -881,7 +881,7 @@
               <h3 id="myModalLabel" class="modal-title">{{_('Collect Leads from LinkedIn and Gmail')}} </h3>
             </div>
             <div class="modal-body">
-                <iframe width="100%" height="360" src="https://www.youtube.com/embed/o2BUixBI4Ms" frameborder="0" allowfullscreen></iframe>
+                <iframe width="100%" height="360" src="https://www.youtube.com/watch?v=Q1OZufCnAk8" frameborder="0" allowfullscreen></iframe>
             </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
