work on site speed
Former-commit-id: fd5bf13dd6e7f46cb6a4f96f77b1f77389888212 [formerly 575fa694ca4258c809af4df7ec64a978589ed1b4] [formerly d0a81cbe3e1e7b6b261bc815ff6d8b9337931002 [formerly ff7c88e46ba9989c7182c21f6987aea55ed2d9bc]]
Former-commit-id: 5527fd9e2ece9f517ff95db65b189856befc5279 [formerly 9ef33498da26c2899467c351f7ac4c75604c888e]
Former-commit-id: cb8bf31264d073b75460d5ed4c7be9d3bcce69ae

--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -112,9 +112,7 @@ if (window.location.host != "localhost")
       </div>
     </header>
     <section class="section-intro section-panel-fullscreen js-fullscreen" style="height: 682px; opacity: 1;">
-
       <div class="section-photo-fullscreen section-photo js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-origin="0" data-preserve-aspect-ratio="false" data-reverse-parallax="true" data-src="http://storage.googleapis.com/iogrow-cdn/opt_files/intro.jpg" style="height: 882px; background-image: url(http://storage.googleapis.com/iogrow-cdn/opt_files/intro-1600.jpg);"></div>
-
       <div class="section-centered section-vertical-align js-vertical-align js-parallax-image" data-origin="0" data-parallax-fade="true" data-parallax-speed="3" data-reverse-parallax="true" style="margin-top: -165px; opacity: 1;">
         <div class="one-whole">
           <img alt="Drive logo logo-heading" title="ioGrow" src="http://storage.googleapis.com/iogrow-gs/Logo-iogrow.png" height="125">
@@ -190,7 +188,7 @@ if (window.location.host != "localhost")
         </div>
       </section>
       <div class="photo-wrapper">
-        <div class="section-photo section-photo-pack js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600,2200" data-known-dimensions="false" data-parallax-speed="4" data-preserve-aspect-ratio="false"  data-src="http://i.imgur.com/QeIfnAE.jpg" style="transform: matrix(1, 0, 0, 1, 0, 54.921875); background-image: url(http://i.imgur.com/QeIfnAE.jpg);"></div>
+        <div class="section-photo section-photo-pack js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600,2200" data-known-dimensions="false" data-parallax-speed="4" data-preserve-aspect-ratio="false"  data-src="http://storage.googleapis.com/iogrow-cdn/img/welcome_img/discovery_back.jpg" style="transform: matrix(1, 0, 0, 1, 0, 54.921875); background-image: url(http://storage.googleapis.com/iogrow-cdn/img/welcome_img/discovery_back.jpg);"></div>
       </div>
       <section class="section-filesanywhere js-hinted-fullscreen" style="height: 407px;">
         <div class="content">
@@ -212,7 +210,7 @@ if (window.location.host != "localhost")
         </div>
       </section>
       <div class="photo-wrapper">
-        <div class="section-photo section-photo-travel js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-parallax-speed="4" data-preserve-aspect-ratio="false"   data-src="http://i.imgur.com/y0sGun0.jpg" style="transform: matrix(1, 0, 0, 1, 0, 17.1600952148438); background-image: url(http://i.imgur.com/y0sGun0.jpg);"></div>
+        <div class="section-photo section-photo-travel js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-parallax-speed="4" data-preserve-aspect-ratio="false"   data-src="http://storage.googleapis.com/iogrow-cdn/img/welcome_img/2.jpg" style="transform: matrix(1, 0, 0, 1, 0, 17.1600952148438); background-image: url(http://storage.googleapis.com/iogrow-cdn/img/welcome_img/2.jpg);"></div>
       </div>
         <section class="section-filetypes js-hinted-fullscreen" style="min-height: 400px;">
           <div class="content">
@@ -254,7 +252,7 @@ if (window.location.host != "localhost")
         </div>
       </section>
       <div class="photo-wrapper">
-        <div class="section-photo section-photo-pack js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600,2200" data-known-dimensions="false" data-parallax-speed="4" data-preserve-aspect-ratio="false" data-src="http://i.imgur.com/hsPHpkg.jpg" style="transform: matrix(1, 0, 0, 1, 0, 54.921875); background-image: url(http://i.imgur.com/hsPHpkg.jpg);"></div>
+        <div class="section-photo section-photo-pack js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600,2200" data-known-dimensions="false" data-parallax-speed="4" data-preserve-aspect-ratio="false" data-src="http://storage.googleapis.com/iogrow-cdn/img/welcome_img/3.jpg" style="transform: matrix(1, 0, 0, 1, 0, 54.921875); background-image: url(http://storage.googleapis.com/iogrow-cdn/img/welcome_img/3.jpg);"></div>
       </div>
        <section class="section-filetypes js-hinted-fullscreen" style="min-height: 400px;padding-bottom:0px">
             <div class="content">
@@ -334,25 +332,25 @@ if (window.location.host != "localhost")
         <div class="content">
           <div class="column column-full-width with-copy">
             <div class="col4" style="width: 33.33333333333333%; display:inline-block;float:left;text-align: center;padding-bottom:15px;">
-              <img src="http://i.imgur.com/dVRyDA6.png">
+              <img src="http://storage.googleapis.com/iogrow-cdn/img/welcome_img/gmail_icon.png">
               <p class="section-body">
                 Chrome Extension for Gmail
               </p>
             </div>
             <div class="col4" style="width: 33.33333333333333%;display:inline-block;float:left;text-align: center;padding-bottom:15px;">
-              <img src="http://i.imgur.com/GWPidOM.png">
+              <img src="http://storage.googleapis.com/iogrow-cdn/img/welcome_img/drive.png">
               <p class="section-body">
                 Manage files with Google Drive
               </p>
             </div>
             <div class="col4" style="width: 33.33333333333333%;display:inline-block;float:left;text-align: center;padding-bottom:15px;">
-              <img src="http://i.imgur.com/tbKcrAB.png">
+              <img src="http://storage.googleapis.com/iogrow-cdn/img/welcome_img/calendar.png">
               <p class="section-body">
                 Synced with Google Calendar
               </p>
             </div>
             <div style="width:100%;display:inline-block;float:left;text-align: center;">
-              <img src="http://i.imgur.com/Tw3cvef.png">
+              <img src="http://storage.googleapis.com/iogrow-cdn/img/welcome_img/hangouts.png">
               <p class="section-body">
                 Video calls powered by Google Hangouts
               </p>
@@ -361,7 +359,7 @@ if (window.location.host != "localhost")
         </div>
       </section>
       <div class="photo-wrapper">
-        <div class="section-photo section-photo-travel js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-parallax-speed="4" data-preserve-aspect-ratio="false"  data-src="http://i.imgur.com/QyBL4SX.jpg" style="transform: matrix(1, 0, 0, 1, 0, -463.9375); background-image: url(http://i.imgur.com/QyBL4SX.jpg);"></div>
+        <div class="section-photo section-photo-travel js-parallax-image js-responsive-image loaded" data-breakpoints="320,768,1024,1200,1600" data-known-dimensions="false" data-parallax-speed="4" data-preserve-aspect-ratio="false"  data-src="http://storage.googleapis.com/iogrow-cdn/img/welcome_img/success.jpg" style="transform: matrix(1, 0, 0, 1, 0, -463.9375); background-image: url(http://storage.googleapis.com/iogrow-cdn/img/welcome_img/success.jpg);"></div>
       </div>
       <section class="section-download section-panel-fullscreen js-hinted-fullscreen" style="height: 600px;">
         <div class="section-centered section-vertical-align js-vertical-align" style="margin-top: -151.5px;">
