--- a/templates/new_web_site/salesforce.html
+++ b/templates/new_web_site/salesforce.html
@@ -62,9 +62,7 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         </div>
         <div class="column column-right with-copy">
           
-  <img src="http://www.ringdna.com/wp-content/uploads/2014/01/LinkedinSFDCLogos.png" style="
-    height: 155px;
-">
+  <img src="http://storage.googleapis.com/iogrow-cdn/Linkedin---Salesforce-icon.png">
         
             <h1 class="section-headline heading-headline allow-orphan">
 LinkedIn to Salesforce</h1>
