change the adress, nofollow for the blog
Former-commit-id: f775660023f18e523e8d5370986d1b71d3a8a1cc [formerly 49611eae3ded6a46a49ce9c82dad425ae07b062f] [formerly 4ecd8638b359e24d5400eaaa811ca41be5bb75d0 [formerly d971d8606a04c8e0bd5bc71631a843db406a6833]]
Former-commit-id: 37445a6e64eab343e7b54b16fb2367ec1137c727 [formerly 176d934903b6e3fa39738f635738eb012819fe18]
Former-commit-id: b8205be88629935e0821d86630ed740c4015b048

--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -436,7 +436,7 @@ margin-right: 10px;">
             </li>
            
             <li>
-              <a href="http://blog.iogrow.com/">ioGrow Blog</a>
+              <a rel="nofollow" href="http://blog.iogrow.com/">ioGrow Blog</a>
             </li>
             <li>
               <a href="/terms-of-services/">Terms of service</a>
