--- a/templates/new_web_site/privacy-policy.html
+++ b/templates/new_web_site/privacy-policy.html
@@ -90,9 +90,7 @@ Questions about this privacy policy? Please get in touch at support@iogrow.com a
         <div class="maia-aux">
           <ul>
           <li>
-            800 West El Camino Real,
-Suite 180, Mountain View,
-California, 94040,
+            228 Hamilton Avenue, Palo Alto, CA 94301
           </li>
             <li>
             
@@ -101,7 +99,7 @@ California, 94040,
             </li>
            
             <li>
-              <a href="http://blog.iogrow.com/">ioGrow Blog</a>
+              <a rel="nofollow"  href="http://blog.iogrow.com/">ioGrow Blog</a>
             </li>
             <li>
               <a href="/terms-of-services/">Terms of service</a>
