--- a/templates/new_web_site/security-informations.html
+++ b/templates/new_web_site/security-informations.html
@@ -85,9 +85,7 @@ Have you noticed abuse, misuse, an exploit, or experienced an incident with your
         <div class="maia-aux">
           <ul>
           <li>
-            800 West El Camino Real,
-Suite 180, Mountain View,
-California, 94040,
+            228 Hamilton Avenue, Palo Alto, CA 94301
           </li>
             <li>
             
@@ -96,7 +94,7 @@ California, 94040,
             </li>
            
             <li>
-              <a href="http://blog.iogrow.com/">ioGrow Blog</a>
+              <a rel="nofollow"  href="http://blog.iogrow.com/">ioGrow Blog</a>
             </li>
             <li>
               <a href="/terms-of-services/">Terms of service</a>
