--- a/templates/new_web_site/terms-of-services.html
+++ b/templates/new_web_site/terms-of-services.html
@@ -118,9 +118,7 @@ Any new features that augment or enhance the current Service, including the rele
         <div class="maia-aux">
           <ul>
           <li>
-            800 West El Camino Real,
-Suite 180, Mountain View,
-California, 94040,
+           228 Hamilton Avenue, Palo Alto, CA 94301
           </li>
             <li>
             
@@ -129,7 +127,7 @@ California, 94040,
             </li>
            
             <li>
-              <a href="http://blog.iogrow.com/">ioGrow Blog</a>
+              <a rel="nofollow"  href="http://blog.iogrow.com/">ioGrow Blog</a>
             </li>
             <li>
               <a href="/terms-of-services/">Terms of service</a>
