change the adress on privacy, security, terms-of-services on website
Former-commit-id: d9a41081bba0ac377af04a98cb02f8e3e52667a9 [formerly b05379da6f0be6671ac376f866874dbc11e6499a] [formerly 8928c7a357fa625dcd8cb88d10c3da3297430aa9 [formerly c7eacd016998e05658dd8b5a608f5cea83376994]]
Former-commit-id: d15b47158f7152ebc21c2ab7ffc9a1db0af012fa [formerly 46365f6a5e14fb19f572cb77966ff6d83c6163e7]
Former-commit-id: d1de227486b5cb02d1ad359183c5ee1b9772398e

--- a/templates/new_web_site/privacy-policy.html
+++ b/templates/new_web_site/privacy-policy.html
@@ -90,7 +90,16 @@ Questions about this privacy policy? Please get in touch at support@iogrow.com a
         <div class="maia-aux">
           <ul>
           <li>
-            228 Hamilton Avenue, Palo Alto, CA 94301
+            <span itemscope itemtype="http://schema.org/LocalBusiness">
+  <!--  <span itemprop="name">iOgrow - The Social CRM for small businesses</span> -->
+   <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+     <span itemprop="streetAddress">228 Hamilton Avenue</span>
+     <span itemprop="addressLocality">Palo Alto</span>,
+     <span itemprop="addressRegion">CA</span>
+     <span itemprop="postalCode">94301</span>
+   </span>
+   Phone: <span itemprop="telephone">+1 (650) 353-2399</span>
+</span>
           </li>
             <li>
             
