--- a/templates/new_web_site/security-informations.html
+++ b/templates/new_web_site/security-informations.html
@@ -85,7 +85,16 @@ Have you noticed abuse, misuse, an exploit, or experienced an incident with your
         <div class="maia-aux">
           <ul>
           <li>
-            228 Hamilton Avenue, Palo Alto, CA 94301
+          <span itemscope itemtype="http://schema.org/LocalBusiness">
+            <!--  <span itemprop="name">iOgrow - The Social CRM for small businesses</span> -->
+             <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+               <span itemprop="streetAddress">228 Hamilton Avenue</span>
+               <span itemprop="addressLocality">Palo Alto</span>,
+               <span itemprop="addressRegion">CA</span>
+               <span itemprop="postalCode">94301</span>
+             </span>
+             Phone: <span itemprop="telephone">+1 (650) 353-2399</span>
+          </span>
           </li>
             <li>
             
