--- a/templates/new_web_site/terms-of-services.html
+++ b/templates/new_web_site/terms-of-services.html
@@ -118,7 +118,16 @@ Any new features that augment or enhance the current Service, including the rele
         <div class="maia-aux">
           <ul>
           <li>
-           228 Hamilton Avenue, Palo Alto, CA 94301
+           <span itemscope itemtype="http://schema.org/LocalBusiness">
+  <!--  <span itemprop="name">iOgrow - The Social CRM for small businesses</span> -->
+   <span itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+     <span itemprop="streetAddress">228 Hamilton Avenue</span>
+     <span itemprop="addressLocality">Palo Alto</span>,
+     <span itemprop="addressRegion">CA</span>
+     <span itemprop="postalCode">94301</span>
+   </span>
+   Phone: <span itemprop="telephone">+1 (650) 353-2399</span>
+</span>
           </li>
             <li>
             
