--- a/templates/new_web_site/index.html
+++ b/templates/new_web_site/index.html
@@ -453,9 +453,9 @@ margin-right: 10px;">
               <a href="/security/">Security information</a>
             </li>
             <li>
-              <a href="https://gcdc2013-iogrow.appspot.com/_ah/api/explorer" rel="nofollow">API&DOCS</a>
+              <a href="https://gcdc2013-iogrow.appspot.com/_ah/api/explorer" rel="nofollow">API&DOCS Salesfrorce</a>
             </li>
-            
+           
           </ul>
         </div>
       </div>
