start using ioGrow
Former-commit-id: cfff2539924b4f536c87eb32fa73b63d1deed4d7 [formerly 015ea6e58281ef5c6bc415b02b8bf63943712475] [formerly f7365bd5dc8b9f9058297ac1bf9777aebd2d4071 [formerly 1cd3d284b06f48a0bfe17ef588dab3b76b1c7971]]
Former-commit-id: 3406b286c378f287eb9dcf552318c6c851edde9e [formerly 1d820d761a3af1731f426bf4761a5a174bf1c4c9]
Former-commit-id: 8ec90503591b19486afab7374fe092493a76565a

--- a/templates/new_web_site/sign-up.html
+++ b/templates/new_web_site/sign-up.html
@@ -83,7 +83,7 @@ window._fbq.push(['track', '6026368632186', {'value':'0.01','currency':'USD'}]);
 
                          <!--  <input required autofocus type="text" name="tags" placeholder="Describe your business: #topic1, #topic2" > -->
 
-                          <input id="signIn" name="signIn" class="maia-button button-download download-mobile get-started" type="submit" value="Start my free trial >">
+                          <input id="signIn" name="signIn" class="maia-button button-download download-mobile get-started" type="submit" value="Start using ioGrow >">
 
                         </form>
 
