fix inbound email bugs
Former-commit-id: da71c919a931c1d3860c27156492de84bd89610e [formerly 124421ee8d048e2dbe67f93ff822bbb9141255e4] [formerly 5623f7a5386ac8ca6d3baa18fcc6382895b988bb [formerly 5691b20ff2b7ea3c1336e2f8dea25716283c166a]]
Former-commit-id: 3c6dd31122dca42299c443cb553809eafc6e799a [formerly 7b2c50a4187265271f331ea6537a1ee1df1507e3]
Former-commit-id: 7b9cb1b4cf80fbd7c01edbffb03a4372a3ba2902

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -172,8 +172,8 @@
                       <div class="col-md-12  margin-bottom-10">
                         <p class⁼"lead"="">
                           {{ _('To add an outside email to this account, forward or BCC to:')}}
-                          <a href="mailto:111054727630979006769@gcdc2013-iogrow.appspotmail.com">
-                            111054727630979006769@gcdc2013-iogrow.appspotmail.com
+                          <a href="mailto:{{ME}}@gcdc2013-iogrow.appspotmail.com">
+                            {{ME}}@gcdc2013-iogrow.appspotmail.com
                           </a>
                           <br>
                           {{ _('Or just add notes to remember what\'s important.')}}
