--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -459,7 +459,7 @@
                                         <div class="col-md-12" ng-show="showNewContact">
                                             <div class="relatedNewForm">
                                                 <div class="showPage col-md-12 newActionsBtn">
-                                                  <span>{{ _('Creating now Contact')}} </span>                              
+                                                  <span>{{ _('Create Contact')}} </span>                              
                                                   <button class="btn btn-sm  red newAccountBtn pull-right" ng-click="savecontact(contact)">{{ _('Create')}}</button>
                                                   <button class="btn btn-sm btn-default newAccountBtn pull-right closeBtn" ng-click="hideNewContactForm()">{{ _("Close")}}</button>
                                                   <div class="clearfix"></div>
