--- a/templates/discovers/discover_list.html
+++ b/templates/discovers/discover_list.html
@@ -51,7 +51,7 @@
                       <i class="fa fa-group"></i> {{ _("Influencers") }}  
                 </a>
                  <a id="map" class="headerBtn" title="Add tags" ng-class="{activeFilter: selectedOption =='map'}" ng-click="showMaps();selectedOption ='map'" ng-hide=" selectedCards.length==0"> 
-                      <i class="fa fa-map-marker"></i> {{ _("MAp") }}  
+                      <i class="fa fa-map-marker"></i> {{ _("Map") }}  
                 </a>
                 <div class="btn-group show_md" style="margin-left: 8px; margin-right: 0px; vertical-align: baseline;">
                   <a class="headerBtn" title="More" data-toggle="dropdown"> 
